logs/segis_net_error_176939.err
Using TensorFlow backend.
/home/groups/dlmrimnd/jacob/miniconda3/envs/segisnet_env/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: compiletime version 3.5 of module 'tensorflow.python.framework.fast_tensor_util' does not match runtime version 3.6
  return f(*args, **kwds)
Traceback (most recent call last):
  File "/home/groups/dlmrimnd/jacob/projects/Segis-Net/code/Segis-Net/Train_SegisNet.py", line 28, in <module>
    from Loss_metrics import sigmoid_DC, sigmoid_sftDC, grad_loss, DCLoss, MeanSquaredError
  File "/home/groups/dlmrimnd/jacob/projects/Segis-Net/code/Segis-Net/Loss_metrics.py", line 18, in <module>
    from Transform_layer_interpn_0 import Grad
  File "/home/groups/dlmrimnd/jacob/projects/Segis-Net/code/Segis-Net/Transform_layer_interpn_0.py", line 99
    vol, trf = inputs
      ^
IndentationError: expected an indented block
